<resources>
    <string name="app_name">Papillon</string>
    <string name="toolbar_name">User Name</string>
    <string name="user_name">user Name</string>
    <string name="user_surname">user Surname</string>
    <string name="menu_vert_popup" translatable="false">vert menu</string>
    <string name="bottom_nav_home" translatable="false">Home</string>
    <string name="bottom_nav_search" translatable="false">Search</string>
    <string name="bottom_nav_add_post" translatable="false">Add post</string>
    <string name="bottom_nav_favorites" translatable="false">Favorites</string>
    <string name="bottom_nav_profile" translatable="false">Profile</string>
    <string name="person_was" translatable="false">30/09/21 at 13:07</string>
    <string name="user_avatar">User avatar</string>
    <string name="is_you">You</string>
    <string name="company">Netology</string>
    <string name="position">Student of the android development course</string>
    <string name="period" translatable="false">29.09.2020 - 29.11.2021</string>
    <string name="web" translatable="false">netology.ru</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save" translatable="false">ok</string>
    <string name="Enter_content_of_post">Enter content of post</string>
    <string name="Insert_URL_of_video">Enter video URL</string>
    <string name="chooser_video_post" translatable="false">Video content</string>
    <string name="enter_company_name">Name of company</string>
    <string name="enter_position">Your position</string>
    <string name="enter_start">Start of period</string>
    <string name="enter_finish">Finish of period</string>
    <string name="enter_link" translatable="false">URL</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="add_post_fab" translatable="false">Add post</string>
    <string name="warning_profile">To communicate on the Papillon network, you need to fill out a profile.</string>
    <string name="fill_profile">-FILL IN THE PROFILE-</string>
    <string name="button_add_a_job">-ADD A JOB-</string>
    <string name="button_fill_a_profile">-FILL A PROFILE-</string>
    <string name="at_home">You are on the home page</string>
    <string name="enter_user_name">Name of name</string>
    <string name="online" translatable="false">online</string>
    <string name="offline" translatable="false">offline</string>
    <string name="chooser_share_post">Share post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="error_network">Network error. Try again later</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="showPhotoImage">Show photo and image</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="userName">Enter your name:</string>
    <string name="login">Enter login:</string>
    <string name="password">Enter password:</string>
    <string name="enter">Enter</string>
    <string name="annotationSignIn">To log in, enter your username and password or register:</string>
    <string name="annotationSignUp">To log in, you need to register:</string>
    <string name="hasSignIp">I already have a username and password...</string>
    <string name="dontFilled">Not all fields are filled in.</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="exit_annotation">Log out of your account?</string>
    <string name="yes">YES</string>
    <string name="not">NOT</string>
    <string name="text_new_post">Content of new post</string>

</resources>