<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/bottom_nav_home"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_search_24"
        android:title="@string/bottom_nav_search"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_post_add_24"
        android:title="@string/bottom_nav_add_post"
        android:orderInCategory="4"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/bottom_nav_favorites"
        android:orderInCategory="3"/>
</menu>